# hello_webassembly

./: CMakeLists.txt  README.md  build.sh
src/: main.cpp
web/: index.html  init.js
